<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
  <TextView 
    android:id="@+id/trule_quit"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="#696969"
    android:drawableLeft="@drawable/y5"
    android:drawablePadding="25dp"
    android:gravity="center_vertical"
    android:text="@string/setting_set"
    android:textColor="@color/blak"
    android:textSize="20sp"
      />
<LinearLayout 
    android:orientation="vertical" 
    android:padding="10dip"
    android:background="@color/wwhite"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
      <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="50dip"
         android:orientation="horizontal"
         android:id="@+id/linearlayout"
         android:paddingTop="15dp"
         >
         <TextView 
             android:paddingTop="3dp"
             android:paddingBottom="7dp"
             android:id="@+id/time_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/setting_time"
             android:textSize="16sp"
             android:textColor="@color/blak"
             android:gravity="center_vertical"
             />
          <TextView 
              android:paddingLeft="15dp"
             android:id="@+id/time_hour"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             />
           <TextView 
             android:id="@+id/time_second"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             />
     </LinearLayout>
<TextView 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/setting_manager_local"
    android:textSize="21sp"
    android:textColor="@color/yell"
    android:padding="10dip"
    />
<View 
    android:layout_height="2dip"
    android:background="@color/yell"
    android:layout_width="fill_parent"
    />
<Spinner 
    android:id="@+id/setting_spinner"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:entries="@array/judge_local"
    android:popupBackground="@color/white"
    />
 <ScrollView 
     android:layout_width="fill_parent"
     android:layout_height="170dip"
     >
     <EditText 
         android:id="@+id/sett_local"
         android:layout_width="fill_parent"
         android:layout_height="100dip"
         android:hint="@string/setting_local"
         android:editable="false"
         android:lines="2"
         />
 </ScrollView>
 <View 
     android:layout_width="fill_parent"
     android:layout_height="2dip"
     android:background="@color/yell"
     />
 <TextView 
     android:id="@+id/setting_yun"
      android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:text="@string/setting_yunku"
     android:textSize="16sp"
     android:textColor="@color/blak"
     android:paddingTop="13dp"
     />
</LinearLayout>
</LinearLayout>
